--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <div id="header">
     <table width=100%><tr height=25>
       <td style="padding-bottom: 5px; font-size:23px;" width=300 valign=bottom>
-        <%= link_to_unless_current("Private Webpage", '/') %>
+        <%= link_to_unless_current("BAMRU.net", '/') %>
       </td>
       <td align=center valign=bottom>
         <div id=subnav><%= raw header_nav%></div>
