--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,9 @@
   <div id="footer">
     <table align="center"><tr><td>Internal Use Only</td></tr></table>
   </div>
-  <div class="debug"><%= raw debug_footer_text %></div>
+  <% unless ENV['RAILS_ENV'] == 'production' %>
+    <div class="debug"><%= raw debug_footer_text %></div>
+  <% end %>
 </div>
 
 
