--- a/app/views/avail_ops/_avail_ops_fields.html.erb
+++ b/app/views/avail_ops/_avail_ops_fields.html.erb
@@ -1,6 +1,8 @@
 <tr>
-  <td><%= opfld.text_field :start  , {:size => 10, :class => "zdate" } %></td>
-  <td><%= opfld.text_field :end    , {:size => 10, :class => "zdate" } %></td>
-  <td><%= opfld.text_field :comment, {:size => 30} %></td>
-  <td><%= link_to("DELETE", member_avail_ops_path(@member, :id => op.id), :method => :delete, :confirm => "Are you sure?") %></td>
+  <td><%= opfld.text_field :start_txt, {:size => 8, :class => "zdate" } %></td>
+  <td><%= opfld.text_field :end_txt  , {:size => 8, :class => "zdate" } %></td>
+  <td><%= opfld.text_field :comment, {:size => 15} %></td>
+  <% if can_update?(@member) %>
+    <td><%= link_to("DELETE", member_avail_ops_path(@member, :id => op.id), :method => :delete, :confirm => "Are you sure?") %></td>
+  <% end %>
 </tr>
