--- a/app/views/home/mobile.html.erb
+++ b/app/views/home/mobile.html.erb
@@ -13,5 +13,5 @@ Visit <%= link_to mobile_url, mobile_path %> with your mobile browser!
 <li>Blackberry's stock browser doesn't work.  Use the newest version of <a href="http://www.opera.com/mobile/">Opera Mini</a>.</li>
 <li>iPad/iPod/iPhone have only been tested with IOS 4.2.1.  Older versions of IOS may not work.</li>
 <li>Android has only been tested on 2.2 (Froyo).  Older versions of Android may not work.</li>
-<li>The mobile pages should work with in modern a desktop browsers.  Testing was successful on Firefox 5 and Chrome 12.0.742.</li>
+<li>The mobile pages should also work with modern desktop browsers.  Testing was successful on Firefox 5 and Chrome 12.0.742.</li>
 </ul>
