password reset works end-to-end

--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -91,7 +91,7 @@
         <span class=plabel>Confirmation: </span>
         <%= f.password_field :password_confirmation, :size => 13 %>
       </div>
-      <p></p><b>Ham & V9</b>
+      <p></p><b>Ham & V9</b>con/app
       <div id=ham_v9>
         <span class=hlabel>Ham: </span>
         <%= f.text_field :ham, :size => 6 %><br/>
