--- a/app/views/notifier/password_reset_email.text.erb
+++ b/app/views/notifier/password_reset_email.text.erb
@@ -2,10 +2,17 @@ Someone has requested a 'reset password' link be sent to your email address.
 
 If that someone is YOU, please click on the link below to reset your BAMRU.net password.
 
-<%= password_reset_url %>?token=<%= @member.forgot_password_token %>
+<%= @url %>?token=<%= @member.forgot_password_token %>
 
 Thanks!
 
 BAMRU.net
 
-(Note: the reset link expires at <%= @member.forgot_password_expires_at.strftime("%H:%M") %>)
+<%#
+
+    TODO: re-add this code after the timezone problem is fixed...
+    
+Note:
+- this reset link expires at <%= @expire >
+- each reset link can be used only once
+%>
