--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -1,11 +1,11 @@
 <%= javascript_include_tag "faye.js" %>
 <%= javascript_include_tag "chats.js" %>
-<%= javascript_include_tag "chats_create.js" %>
+<%# javascript_include_tag "chats_create.js" %>
 
 <h2>CHAT</h2>
 
 <ul id="chat">
-  <%= render @messages %>
+  <%= render @chats %>
 </ul>
 
 <%= form_for Chat.new, :remote => true do |f| %>
