simple chat is working (with glitches)

--- a/app/views/chats/create.js.erb
+++ b/app/views/chats/create.js.erb
@@ -1,2 +1,4 @@
+<% broadcast "/chats/new" do %>
 $("#chat").prepend("<%= escape_javascript render(@chat) %>");
+<% end %>
 $("#new_chat")[0].reset();
