added lat/lon, UA & screen size to mobile/about

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -58,10 +58,17 @@
             </td>
           </tr>
           <tr>
-            <td valign="top" class="body" bgcolor="#eeeeee"><I><b><font color="#333333" size="2">Member Library</font></b></I><br></td>
+            <td valign="top" class="body" bgcolor="#eeeeee"><I><b><font color="#333333" size="2">Member Services</font></b></I><br></td>
           </tr>
           <tr>
-            <td valign="top" bgcolor="white"><font size="2" class="body"><b><a href="/home/tbd">BamruWiki</a></b><br></font></td>
+            <td valign="top" bgcolor="white">
+              <table width=100%><tr>
+                <td><font size="2" class="body"><b><a href="/home/tbd">BAMRU Wiki</a></b><br/></font></td>
+                <% if current_member.developer? %>
+                  <td align=right><b><%= link_to "BAMRU Chat", '/chats' %></b></td>
+                <% end %>
+              </tr></table>
+            </td>
           </tr>
           <tr>
             <td align="right" class="body" bgcolor="#cccccc"></td>
