--- a/app/views/home/mobile.html.erb
+++ b/app/views/home/mobile.html.erb
@@ -4,7 +4,7 @@ Mobile pages are for smart phones and touch-screen devices.
 <p></p>
 They are designed to work on Android, iPhone, iPad, and Blackberry.
 <p></p>
-Visit <%= link_to mobile_url, mobile_path %> with your mobile browser!
+Visit <%= link_to mobile_url, mobile_path %> with your mobile browser.
 <p></p>
 <br/>
 <p></p>
