fixed bug with log-out button

--- a/app/views/layouts/mobile.html.erb
+++ b/app/views/layouts/mobile.html.erb
@@ -26,7 +26,7 @@
   </div>
 
 
-<% if request.env['REQUEST_PATH'] == '/mobile/about' %>
+<% if request.env['REQUEST_PATH'].include?('/mobile/about') %>
 <div data-role="footer" data-position="fixed">
 <%= link_to "log out", mobile_logout_path, "data-role" => "button", "data-position" => "inline"%>
 </div>
