fixed display in mobile/map

--- a/app/views/mobile/about.html.erb
+++ b/app/views/mobile/about.html.erb
@@ -20,4 +20,9 @@ Use BAMRU Mobile on Android, iPhone, iPad, or BlackBerry/Opera.
     <td align=right>Location:</td>
     <td><span id="loc">TBD</span></td>
   </tr>
+  <tr id="map_button">
+    <td colspan=2>
+      <a href='/mobile/map' data-role='button' data-ajax="false">Map</a>
+    </td>
+  </tr>
 </table>
