--- a/app/views/mobile/geo.html.erb
+++ b/app/views/mobile/geo.html.erb
@@ -1,8 +1,8 @@
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 
-<b>GeoLocation</b>
+<h3>GeoLocation</h3>
 <article>
-  <p>Finding your location: <span id="status">checking...</span></p>
+  <p>You are at: <span id="status">checking...</span></p>
 </article>
 
 <script>
@@ -14,11 +14,8 @@
       return;
     }
 
-    s.innerHTML = "found you!<br/>(" + position.coords.latitude + "/" + position.coords.longitude + ")" ;
+    s.innerHTML = position.coords.latitude + " / " + position.coords.longitude;
     s.className = 'success';
-
-    alert("NOW THERE");
-    return;
 
     var mapcanvas = document.createElement('div');
     mapcanvas.id = 'mapcanvas';
