added location and marker to map

--- a/app/views/mobile/map.html.erb
+++ b/app/views/mobile/map.html.erb
@@ -2,7 +2,7 @@
 <%= javascript_include_tag "jquery.ui.map.js" %>
 <%= javascript_include_tag "mobile_map.js" %>
 
-You're at: <span id=coords>TBD...</span>
+Your location: <span id=coords>TBD...</span>
 
 <div id="canvas" style="height: 400px; width: 400px;">
   
