more mobile cleanup

--- a/app/views/mobile/map.html.erb
+++ b/app/views/mobile/map.html.erb
@@ -2,8 +2,8 @@
 <%= javascript_include_tag "jquery.ui.map.js" %>
 <%= javascript_include_tag "mobile_map.js" %>
 
-Your location: <span id=coords>TBD...</span>
+You're at: <span id=coords>TBD...</span>
 
-<div id="canvas" style="height: 400px; width: 400px;">
+<div id="canvas" style="height: 300px; width: 300px;">
   
 </div>
