--- a/app/views/home/mobile.html.erb
+++ b/app/views/home/mobile.html.erb
@@ -2,16 +2,22 @@
 <p></p>
 Mobile pages are for smart phones and touch-screen devices.
 <p></p>
-They are designed to work on Android, iPhone, iPad, and Blackberry.
+BAMRU Mobile works best on Android, iPhone and iPad.  It works less well on BlackBerry/OperaMini.
 <p></p>
-Visit <%= link_to mobile_url, mobile_path %> with your mobile browser.
+Visit <%= link_to mobile_url, mobile_path %> with your mobile browser and give it a try.
 <p></p>
 <br/>
 <p></p>
-<b>Things to note:</b>
+<b>Note: mobile technology is new, and we're still learning about the strengths and weaknesses of the tools and platforms.</b>
 <ul>
 <li>Blackberry's stock browser doesn't work.  Use the newest version of <a href="http://www.opera.com/mobile/">Opera Mini</a>.</li>
 <li>iPad/iPod/iPhone have only been tested with IOS 4.2.1.  Older versions of IOS may not work.</li>
 <li>Android has only been tested on 2.2 (Froyo).  Older versions of Android may not work.</li>
 <li>The mobile pages should also work with modern desktop browsers.  Testing was successful on Firefox 5 and Chrome 12.0.742.</li>
+<li>Text menus and navigation generally work well on all platforms.</li>
+<li>Map display is very good on Android, slower but usable on iPad.</li>
+<li>It takes a minute or so for the map to refresh after changing the screen orientation on iPhone and iPod.</li>
+<li>BlackBerry doesn't support geolocation - so no maps on BlackBerry.</li>
+<li>The best platform is a high-end Android on Verizon/4G.</li>
+<li>High-end Android on ATT/3G is also pretty good.</li>
 </ul>
