fixed javascript/sprocket bug

--- a/app/views/home/mobile.html.erb
+++ b/app/views/home/mobile.html.erb
@@ -8,7 +8,7 @@ Visit <%= link_to mobile_url, mobile_path %> with your mobile browser and give i
 <p></p>
 <br/>
 <p></p>
-<b>Note: mobile technology is new, and we're still learning about the strengths and weaknesses of the tools and platforms.</b>
+<b>Mobile technology is new, and we're still learning about the strengths and weaknesses of the tools and platforms.</b>
 <ul>
 <li>Blackberry's stock browser doesn't work.  Use the newest version of <a href="http://www.opera.com/mobile/">Opera Mini</a>.</li>
 <li>iPad/iPod/iPhone have only been tested with IOS 4.2.1.  Older versions of IOS may not work.</li>
