--- a/app/views/mobile/about.html.erb
+++ b/app/views/mobile/about.html.erb
@@ -22,7 +22,7 @@ Use BAMRU Mobile on Android, iPhone, iPad, or BlackBerry/Opera.
   </tr>
   <tr id="map_button">
     <td colspan=2>
-      <a href='/mobile/map' data-role='button' data-ajax="false">Map</a>
+      <a href='/mobile/map' data-role='button' data-ajax="false">My Location</a>
     </td>
   </tr>
 </table>
