--- a/app/views/mobile/map.html.erb
+++ b/app/views/mobile/map.html.erb
@@ -4,6 +4,5 @@
 
 You're at: <span id=coords>TBD...</span>
 
-<div id="canvas" style="height: 300px; width: 300px;">
-  
-</div>
+<div id="canvas" style="height: 300px; width: 300px;"></div>
+
